Remove support for Telegram, LinkedIn and Medium

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,34 +118,19 @@
          id="input_for_socials">
       <input type="text"
              class="input h-weight-bold"
-             placeholder="twitter username"
-             id="twitter"
-             name="twitter" /><br />
-      <input type="text"
-             class="input h-weight-bold"
-             placeholder="medium username"
-             id="medium"
-             name="medium" /><br />
-      <input type="text"
-             class="input h-weight-bold"
              placeholder="dribbble username"
              id="dribbble"
              name="dribbble" /><br />
       <input type="text"
              class="input h-weight-bold"
-             placeholder="linkedin username"
-             id="linkedin"
-             name="linkedin" /><br />
-      <input type="text"
-             class="input h-weight-bold"
-             placeholder="telegram username"
-             id="telegram"
-             name="telegram" /><br />
-      <input type="text"
-             class="input h-weight-bold"
              placeholder="email address"
              id="email"
-             name="email" />
+             name="email" /><br />
+      <input type="text"
+             class="input h-weight-bold"
+             placeholder="twitter username"
+             id="twitter"
+             name="twitter" />
     </div>
     <br /><br />
     <button type="submit"
