Add support for Codepen, Dev.to and Instagram

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,6 +118,16 @@
          id="input_for_socials">
       <input type="text"
              class="input h-weight-bold"
+             placeholder="codepen username"
+             id="codepen"
+             name="codepen" /><br />
+      <input type="text"
+             class="input h-weight-bold"
+             placeholder="dev username"
+             id="dev"
+             name="dev" /><br />
+      <input type="text"
+             class="input h-weight-bold"
              placeholder="dribbble username"
              id="dribbble"
              name="dribbble" /><br />
@@ -126,6 +136,11 @@
              placeholder="email address"
              id="email"
              name="email" /><br />
+      <input type="text"
+             class="input h-weight-bold"
+             placeholder="instagram username"
+             id="instagram"
+             name="instagram" />
       <input type="text"
              class="input h-weight-bold"
              placeholder="twitter username"
