--- a/assets/themes/dark.css
+++ b/assets/themes/dark.css
@@ -1,15 +1,20 @@
 :root {
   --bg-color: rgb(10, 10, 10);
   --text-color: #fff;
-  --background-image: linear-gradient(90deg,
-    rgba(10, 10, 10, 0.3),
-    rgb(10, 10, 10, 1)),
-  url("{{{background}}}");
-  --background-background: linear-gradient(0deg,
-    rgba(10, 10, 10, 1),
-    rgba(10, 10, 10, 0.6)),
-  url("{{{background}}}") center center fixed;
+  --background-image: linear-gradient(
+      90deg,
+      rgba(10, 10, 10, 0.3),
+      rgb(10, 10, 10, 1)
+    ),
+    url("{{{background}}}");
+  --background-background: linear-gradient(
+      0deg,
+      rgba(10, 10, 10, 1),
+      rgba(10, 10, 10, 0.6)
+    ),
+    url("{{{background}}}") center center fixed;
   --height: 50vh;
+  --gradient: linear-gradient(90deg, #009bef, #ff0000);
 }
 
 #display h1 {
@@ -24,9 +29,11 @@
 
 @media (max-width: 800px) {
   :root {
-    --background-image: linear-gradient(0deg,
-      rgba(10, 10, 10, 1),
-      rgba(10, 10, 10, 0)),
-    url("{{{background}}}") !important;
+    --background-image: linear-gradient(
+        0deg,
+        rgba(10, 10, 10, 1),
+        rgba(10, 10, 10, 0)
+      ),
+      url("{{{background}}}") !important;
   }
 }
