--- a/assets/themes/light.css
+++ b/assets/themes/light.css
@@ -1,9 +1,12 @@
 :root {
   --bg-color: #fff;
   --text-color: rgb(10, 10, 10);
-  --background-image: linear-gradient(90deg,
-    rgba(10, 10, 10, 0.4),
-    rgb(10, 10, 10, 0.4)),
-  url("{{{background}}}");
+  --background-image: linear-gradient(
+      90deg,
+      rgba(10, 10, 10, 0.4),
+      rgb(10, 10, 10, 0.4)
+    ),
+    url("{{{background}}}");
   --background-background: #fff;
+  --gradient: linear-gradient(90deg, #009bef, #ff0000);
 }
