Re-add Telegram support

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -145,6 +145,12 @@
           id="instagram"
           name="instagram"
         />
+        <br />
+        <input type="text"
+             class="input h-weight-bold"
+             placeholder="telegram username"
+             id="telegram"
+             name="telegram" /><br />
         <input
           type="text"
           class="input h-weight-bold"
