Add support for Reddit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -146,6 +146,14 @@
           name="instagram"
         />
         <br />
+        <input
+          type="text"
+          class="input h-weight-bold"
+          placeholder="reddit username"
+          id="reddit"
+          name="reddit"
+        />
+        <br />
         <input type="text"
              class="input h-weight-bold"
              placeholder="telegram username"
