Add support for Keybase

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -149,6 +149,14 @@
         <input
           type="text"
           class="input h-weight-bold"
+          placeholder="keybase username"
+          id="keybase"
+          name="keybase"
+        />
+        <br />
+        <input
+          type="text"
+          class="input h-weight-bold"
           placeholder="reddit username"
           id="reddit"
           name="reddit"
