Add support for Facebook

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -141,6 +141,14 @@
         <input
           type="text"
           class="input h-weight-bold"
+          placeholder="facebook username"
+          id="facebook"
+          name="facebook"
+        />
+        <br />
+        <input
+          type="text"
+          class="input h-weight-bold"
           placeholder="instagram username"
           id="instagram"
           name="instagram"
