--- a/assets/index.css
+++ b/assets/index.css
@@ -1,13 +1,52 @@
+@charset "UTF-8";
+
+@font-face {
+  font-family: "Manrope";
+  src: url("/assets/fonts/web/Manrope-Bold.woff2") format("woff2"),
+    url("/assets/fonts/otf/Manrope-Bold.otf") format("opentype");
+  font-style: normal;
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Manrope";
+  src: url("/assets/fonts/web/Manrope-SemiBold.woff2") format("woff2"),
+    url("/assets/fonts/otf/Manrope-SemiBold.otf") format("opentype");
+  font-style: normal;
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Manrope";
+  src: url("/assets/fonts/web/Manrope-Medium.woff2") format("woff2"),
+    url("/assets/fonts/otf/Manrope-Medium.otf") format("opentype");
+  font-style: normal;
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Manrope";
+  src: url("/assets/fonts/web/Manrope-Regular.woff2") format("woff2"),
+    url("/assets/fonts/otf/Manrope-Regular.otf") format("opentype");
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Manrope";
+  src: url("/assets/fonts/web/Manrope-Light.woff2") format("woff2"),
+    url("/assets/fonts/otf/Manrope-Light.otf") format("opentype");
+  font-style: normal;
+  font-weight: 300;
+}
+
 body {
   align-items: center;
   background: var(--bg-color);
   color: var(--text-color);
-  font-family: "Poppins", sans-serif;
+  font-family: "Manrope", sans-serif;
   margin: 0%;
   max-width: 100vw;
   overflow-x: hidden;
   padding: 0%;
   width: 100vw;
+  font-feature-settings: "calt", "liga";
 }
 
 #profile {
@@ -31,7 +70,6 @@ body {
   padding: 4vh 3vw;
   padding-left: 33vw;
   width: 64vw;
-  .;
 }
 
 #display h1 {
@@ -88,7 +126,7 @@ body {
 
 #footer a {
   color: var(--text-color) !important;
-  font-family: "Poppins", sans-serif;
+  font-family: "Manrope", sans-serif;
   font-weight: bold;
   text-decoration: none;
 }
