Switch to Iconify and add XDA Developers

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -170,17 +170,28 @@
           name="reddit"
         />
         <br />
-        <input type="text"
-             class="input h-weight-bold"
-             placeholder="telegram username"
-             id="telegram"
-             name="telegram" /><br />
+        <input
+          type="text"
+          class="input h-weight-bold"
+          placeholder="telegram username"
+          id="telegram"
+          name="telegram"
+        />
+        <br />
         <input
           type="text"
           class="input h-weight-bold"
           placeholder="twitter username"
           id="twitter"
           name="twitter"
+        />
+        <br />
+        <input
+          type="text"
+          class="input h-weight-bold"
+          placeholder="xda user id"
+          id="xda"
+          name="xda"
         />
       </div>
       <br />
