--- a/assets/index.css
+++ b/assets/index.css
@@ -383,80 +383,9 @@ body {
   background: var(--text-color);
 }
 
-/* Material Icons */
-.mdi::before {
+/* Iconify */
+
+.iconify {
   font-size: 24px;
   line-height: 14px;
-}
-
-.btn .mdi::before {
-  position: relative;
-  top: 4px;
-}
-
-.btn-xs .mdi::before {
-  font-size: 18px;
-  top: 3px;
-}
-
-.btn-sm .mdi::before {
-  font-size: 18px;
-  top: 3px;
-}
-
-.dropdown-menu .mdi {
-  width: 18px;
-}
-
-.dropdown-menu .mdi::before {
-  left: -8px;
-  position: relative;
-  top: 4px;
-}
-
-.nav .mdi::before {
-  position: relative;
-  top: 4px;
-}
-
-.navbar .navbar-toggle .mdi::before {
-  color: #fff;
-  position: relative;
-  top: 4px;
-}
-
-.breadcrumb .mdi::before {
-  position: relative;
-  top: 4px;
-}
-
-.breadcrumb a:hover {
-  text-decoration: none;
-}
-
-.breadcrumb a:hover span {
-  text-decoration: underline;
-}
-
-.alert .mdi::before {
-  margin-right: 2px;
-  position: relative;
-  top: 4px;
-}
-
-.input-group-addon .mdi::before {
-  position: relative;
-  top: 3px;
-}
-
-.navbar-brand .mdi::before {
-  margin-right: 2px;
-  position: relative;
-  top: 2px;
-}
-
-.list-group-item .mdi::before {
-  left: -3px;
-  position: relative;
-  top: 3px;
 }
