--- a/assets/index.css
+++ b/assets/index.css
@@ -1,55 +1,17 @@
-@charset "UTF-8";
-
-@font-face {
-  font-family: "Manrope";
-  src: url("/assets/fonts/web/Manrope-Bold.woff2") format("woff2"),
-    url("/assets/fonts/otf/Manrope-Bold.otf") format("opentype");
-  font-style: normal;
-  font-weight: 700;
-}
-@font-face {
-  font-family: "Manrope";
-  src: url("/assets/fonts/web/Manrope-SemiBold.woff2") format("woff2"),
-    url("/assets/fonts/otf/Manrope-SemiBold.otf") format("opentype");
-  font-style: normal;
-  font-weight: 600;
-}
-@font-face {
-  font-family: "Manrope";
-  src: url("/assets/fonts/web/Manrope-Medium.woff2") format("woff2"),
-    url("/assets/fonts/otf/Manrope-Medium.otf") format("opentype");
-  font-style: normal;
-  font-weight: 500;
-}
-@font-face {
-  font-family: "Manrope";
-  src: url("/assets/fonts/web/Manrope-Regular.woff2") format("woff2"),
-    url("/assets/fonts/otf/Manrope-Regular.otf") format("opentype");
-  font-style: normal;
-  font-weight: 400;
-}
-@font-face {
-  font-family: "Manrope";
-  src: url("/assets/fonts/web/Manrope-Light.woff2") format("woff2"),
-    url("/assets/fonts/otf/Manrope-Light.otf") format("opentype");
-  font-style: normal;
-  font-weight: 300;
-}
-
 body {
   align-items: center;
   background: var(--bg-color);
   color: var(--text-color);
   font-family: "Manrope", sans-serif;
+  font-feature-settings: "calt", "liga";
   margin: 0%;
   max-width: 100vw;
   overflow-x: hidden;
   padding: 0%;
   width: 100vw;
-  font-feature-settings: "calt", "liga";
 }
 
-#profile {
+.profile {
   background: var(--background-image) center center;
   background-repeat: no-repeat;
   background-size: cover !important;
@@ -64,7 +26,7 @@ body {
   width: 24vw;
 }
 
-#display {
+.display {
   display: inline-block;
   height: 92vh;
   padding: 4vh 3vw;
@@ -72,7 +34,7 @@ body {
   width: 64vw;
 }
 
-#display h1 {
+.display h1 {
   color: var(--text-color);
   font-family: "Asap", sans-serif;
   font-size: 50px;
@@ -84,65 +46,30 @@ body {
   width: 18px;
 }
 
-#background_overlay {
-  height: 55vh;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100vw;
-  z-index: -1;
-}
-
-#background {
-  background-repeat: no-repeat !important;
-  background-size: cover !important;
-  height: 55vh;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100vw;
-  z-index: -2;
-}
-
-#header {
-  padding: 3vh 0px;
-  position: absolute;
-  text-align: right;
-  width: 63vw;
-}
-
-#header a {
-  color: var(--text-color);
-  font-weight: bold;
-  margin-left: 4vw;
-  text-decoration: none;
-}
-
-#footer {
+.footer {
   padding: 8vh 0px;
   text-align: center;
   width: 100%;
 }
 
-#footer a {
+.footer a {
   color: var(--text-color) !important;
   font-family: "Manrope", sans-serif;
   font-weight: bold;
   text-decoration: none;
 }
 
-#profile_img {
-  background: var(--gradient);
-  transition: background 0.5s ease;
-  background-size: 300% 300%;
+.profile_img {
   animation: grad 8s ease infinite;
-  -webkit-background-clip: text;
-  font-size: 128px;
+  background: var(--gradient);
+  background-size: 300% 300%;
   font-family: "Asap Condensed", sans-serif;
-  -webkit-text-fill-color: transparent;
-
+  font-size: 128px;
   height: 180px;
+  transition: background 0.5s ease;
   width: 180px;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 @keyframes grad {
@@ -157,7 +84,7 @@ body {
   }
 }
 
-#profile div {
+.profile div {
   font-weight: bold;
   margin: 1.5vh 0px;
 }
@@ -240,8 +167,8 @@ body {
 }
 
 .projects section {
-  border-radius: 5px;
   border: 1px solid rgb(0, 0, 0, 0.08);
+  border-radius: 5px;
   box-shadow: 0px 0px 0px rgb(0, 0, 0, 0);
   color: var(--text-color);
   display: inline-block;
@@ -312,7 +239,7 @@ body {
 }
 
 @media (max-width: 800px) {
-  #profile {
+  .profile {
     height: 60vh;
     padding: 4vh 5vw;
     position: relative;
@@ -320,23 +247,23 @@ body {
     width: 90vw;
   }
 
-  #display {
+  .display {
     display: inline-block;
     height: auto;
-    padding-left: 5vw;
     padding: 4vh 5vw;
+    padding-left: 5vw;
     width: 90vw;
   }
 
-  #profile_img {
-    margin: 0px auto !important;
-    background: var(--gradient);
-    transition: background 0.5s ease;
-    background-size: 300% 300%;
+  .profile_img {
     animation: grad 8s ease infinite;
-    -webkit-background-clip: text;
-    font-size: 128px;
+    background: var(--gradient);
+    background-size: 300% 300%;
     font-family: "Asap Condensed", sans-serif;
+    font-size: 128px;
+    margin: 0px auto !important;
+    transition: background 0.5s ease;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 
