Add support for Medium, Stack Exchange and Steam

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -165,9 +165,33 @@
         <input
           type="text"
           class="input h-weight-bold"
+          placeholder="medium username"
+          id="medium"
+          name="medium"
+        />
+        <br />
+        <input
+          type="text"
+          class="input h-weight-bold"
           placeholder="reddit username"
           id="reddit"
           name="reddit"
+        />
+        <br />
+        <input
+          type="text"
+          class="input h-weight-bold"
+          placeholder="stackexchange username"
+          id="stackexchange"
+          name="stackexchange"
+        />
+        <br />
+        <input
+          type="text"
+          class="input h-weight-bold"
+          placeholder="steam username"
+          id="steam"
+          name="steam"
         />
         <br />
         <input
