--- a/assets/themes/dark.css
+++ b/assets/themes/dark.css
@@ -14,7 +14,7 @@
     ),
     url("{{{background}}}") center center fixed;
   --height: 50vh;
-  --gradient: linear-gradient(90deg, #009bef, #ff0000);
+  --gradient: linear-gradient(90deg, #009bef, #f00);
 }
 
 #display h1 {
