--- a/views/css/index.css
+++ b/views/css/index.css
@@ -32,7 +32,7 @@ header b {
 
 header a {
   font-size: 16px;
-  margin: 1.8vh 0px;
+  margin: 1.8vh 0;
   margin-left: 4vw;
   color: #000;
   text-decoration: none;
@@ -49,11 +49,11 @@ form {
 }
 
 form .button {
-  margin: 2vh 0px;
+  margin: 2vh 0;
 }
 
 .input {
-  margin: 1.5vh 0px !important;
+  margin: 1.5vh 0 !important;
 }
 
 .label {
@@ -88,6 +88,11 @@ button:hover {
   text-align: right;
 }
 
+.remove i {
+  font-size: 14px;
+  margin-right: 3px;
+}
+
 #top_image i {
   font-size: 20px;
   position: absolute;
@@ -95,7 +100,7 @@ button:hover {
   top: 4vh;
   right: 5vw;
   padding: 15px 15px;
-  background: #ffffff;
+  background: #fff;
   color: rgb(0, 0, 0);
   border-radius: 50%;
 }
@@ -112,9 +117,9 @@ button:hover {
   font-size: 17px;
   line-height: 25px;
   word-spacing: 1.2px;
-  margin: 5vh 0px;
+  margin: 5vh 0;
   background: transparent;
-  border: 0px;
+  border: 0;
   width: 100%;
   font-family: "Questrial", sans-serif;
   resize: none;
@@ -129,15 +134,10 @@ button:hover {
 }
 
 .remove {
-  margin-bottom: 2vh 0px;
+  margin-bottom: 2vh 0;
   font-weight: bold;
   transition: 0.4s ease-in-out;
   font-size: 16px;
-}
-
-.remove i {
-  font-size: 14px;
-  margin-right: 3px;
 }
 
 .remove:hover {
