--- a/assets/index.css
+++ b/assets/index.css
@@ -1,9 +1,30 @@
+@charset "UTF-8";
+@font-face {
+  font-family: "Manrope VF";
+  src: url("/assets/fonts/variable/Manrope%5Bwght%5D.ttf")
+    format("truetype-variations");
+  font-style: normal;
+  font-weight: 200 800;
+}
+
+@font-face {
+  font-family: "Manrope";
+  src: url("/assets/fonts/web/manrope-bold.woff2") format("woff2"),
+    url("/assets/fonts/otf/manrope-bold.otf") format("opentype");
+  font-style: normal;
+  font-weight: 700;
+}
+
 body {
   align-items: center;
   background: var(--bg-color);
   color: var(--text-color);
-  font-family: "Manrope", sans-serif;
+  font-family: "Manrope VF", Manrope, sans-serif;
   font-feature-settings: "calt", "liga";
+  font-size: 64px;
+  font-variation-ligatures: normal;
+  font-variation-settings: "wght" 500;
+  font-weight: 700;
   margin: 0%;
   max-width: 100vw;
   overflow-x: hidden;
@@ -54,8 +75,11 @@ body {
 
 .footer a {
   color: var(--text-color) !important;
-  font-family: "Manrope", sans-serif;
-  font-weight: bold;
+  font-family: "Manrope VF", Manrope, sans-serif;
+  font-feature-settings: "calt", "liga";
+  font-variation-ligatures: normal;
+  font-variation-settings: "wght" 500;
+  font-weight: 700;
   text-decoration: none;
 }
 
