--- a/views/index.ejs
+++ b/views/index.ejs
@@ -149,6 +149,14 @@
         <input
           type="text"
           class="input h-weight-bold"
+          placeholder="initials"
+          id="initials"
+          name="initials"
+        />
+        <br />
+        <input
+          type="text"
+          class="input h-weight-bold"
           placeholder="instagram username"
           id="instagram"
           name="instagram"
