--- a/views/index.ejs
+++ b/views/index.ejs
@@ -149,6 +149,14 @@
         <input
           type="text"
           class="input h-weight-bold"
+          placeholder="facebook username"
+          id="facebook"
+          name="facebook"
+        />
+        <br />
+        <input
+          type="text"
+          class="input h-weight-bold"
           placeholder="initials"
           id="initials"
           name="initials"
@@ -224,6 +232,14 @@
           placeholder="xda user id"
           id="xda"
           name="xda"
+        />
+        <br />
+        <input
+          type="text"
+          class="input h-weight-bold"
+          placeholder="youtube channel id"
+          id="youtube"
+          name="youtube"
         />
       </div>
       <br />
