--- a/views/index.ejs
+++ b/views/index.ejs
@@ -184,6 +184,13 @@
           placeholder="medium username"
           id="medium"
           name="medium"
+        /><br />
+        <input
+          type="text"
+          class="input h-weight-bold"
+          placeholder="pinterest username"
+          id="pinterest"
+          name="pinterest"
         />
         <br />
         <input
