Add support for Pinterest domain verification key
Updated
  - snyk

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -192,6 +192,13 @@
           id="pinterest"
           name="pinterest"
         />
+        <br /><input
+          type="text"
+          class="input h-weight-bold"
+          placeholder="pinterest domain verification key"
+          id="pinterest_key"
+          name="pinterest_key"
+        />
         <br />
         <input
           type="text"
